--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "map-start-layout",
+  "name": "form",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,11 +9,12 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
-    "vue": "^2.6.11",
-    "vue-svg-loader": "^0.16.0",
-    "vuedraggable": "^2.24.3"
+    "date-fns": "^2.25.0",
+    "element-ui": "^2.15.6",
+    "vue": "^2.6.11"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.176",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
